--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="tagline"></div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://www.tiktok.com/@cryptogingersclub"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://www.tiktok.com/@cryptogingersclub"><i class="fas fa-heart"></i></a>
 
     </div>
 	</main>
