--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Crypto Gingers Club, Coming soon.</div>
+		<div class="intro">Crypto Gingers Club, Coming soon, little bean.</div>
 		<div class="tagline"></div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
